TG-34 Create version
Added management for versions in the admin interface
