# api/version.go
@@ -4,7 +4,6 @@ import (
 	"encoding/json"
 	"github.com/gorilla/mux"
 	"jinya-releases/service"
-	"log"
 	"net/http"
 )
 
@@ -37,21 +36,6 @@ func getVersionById(w http.ResponseWriter, r *http.Request) {
 	_ = encoder.Encode(version)
 }
 
-func createVersion(w http.ResponseWriter, r *http.Request) {
-	applicationId := mux.Vars(r)["applicationId"]
-	trackId := mux.Vars(r)["trackId"]
-	encoder := json.NewEncoder(w)
-	version, errDetails, errStatus := service.CreateVersion(r.Body, applicationId, trackId)
-	if errDetails != nil {
-		w.WriteHeader(errStatus)
-		_ = encoder.Encode(errDetails)
-		return
-	}
-
-	w.WriteHeader(http.StatusCreated)
-	_ = encoder.Encode(version)
-}
-
 func deleteVersion(w http.ResponseWriter, r *http.Request) {
 	applicationId := mux.Vars(r)["applicationId"]
 	trackId := mux.Vars(r)["trackId"]
@@ -65,17 +49,6 @@ func deleteVersion(w http.ResponseWriter, r *http.Request) {
 	}
 
 	w.WriteHeader(status)
-}
-
-func uploadVersionBinary(w http.ResponseWriter, r *http.Request) {
-	applicationId := mux.Vars(r)["applicationId"]
-	trackId := mux.Vars(r)["trackId"]
-	versionId := mux.Vars(r)["id"]
-	log.Printf("App id: %s", applicationId)
-	log.Printf("Track id: %s", trackId)
-	log.Printf("Version id: %s", versionId)
-
-	w.WriteHeader(http.StatusNotImplemented)
 }
 
 func pushVersion(w http.ResponseWriter, r *http.Request) {
